# Market-Sentinel

./: .gitignore  CLAUDE.md  README.md  changelog.md  config.example.json  index.md  log.md  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.sh  wsgi.py
agent_docs/: compilation-workflow.md  frontmatter-schema.md  ingestion-workflow.md  lint-workflow.md  query-workflow.md  recommendation-schema.md  source-tiers.md  synthesis-workflow.md  update-schema.md
agent_docs/page-templates/: contradiction.md  entity-company.md  entity-institution.md  entity-person.md  signal.md  source-profile.md  (+3 more)
config/: polling-schedule.yaml  signal-weights.json  sources.yaml  thresholds.json
dashboard/: brief.html  eval.html  index.html  outlook.html  resolved.html  whales.html
extractions/: .extracted  .gitignore
raw/: .hashes
scripts/: brain_io.py  compile.py  extract.py  ingest_arxiv.py  ingest_markets.py  ingest_substack.py  ingest_twitter.py  ingest_youtube.py  score.py  serve.py  start_render.sh  synthesize.py
src/: __init__.py  alerts.py  backtester.py  config.py  database.py  filters.py  forecast_engine.py  forecast_evaluator.py  kalshi.py  main.py  market_data.py  models.py  news_monitor.py  orderbook.py  polymarket.py  signals.py  story_generator.py  technical.py  web_server.py  whale_intelligence.py  whale_tracker.py
tests/: conftest.py  test_brain_io.py  test_compile.py  test_extract.py  test_ingest_arxiv.py  test_ingest_substack.py  test_ingest_twitter.py  test_ingest_youtube.py  test_ingestion.py  test_score.py  test_serve.py  test_synthesize.py
(+39 files in other folders)
