[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "signal-hunter-brain"
version = "3.0.0"
description = "Digital Brain: LLM-maintained market intelligence knowledge base"
requires-python = ">=3.12"
dependencies = [
    # HTTP clients
    "aiohttp>=3.9,<4.0",
    "requests>=2.31,<3.0",

    # LLM SDKs
    "anthropic>=0.39,<1.0",

    # Web server + scheduler
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "apscheduler>=3.10,<4.0",

    # Data
    "pyyaml>=6.0,<7.0",
    "feedparser>=6.0,<7.0",

    # YouTube transcripts
    "youtube-transcript-api>=0.6,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
